# parakeet_nemo_asr_rocm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  VERSIONS.md  docker-compose.yaml  project-overview.md  pyproject.toml  requirements-agent.txt  requirements-all.txt  setup_guide.md
.github/PULL_REQUEST/: pr-feat-major-enhancements-merge.md  pr-feat-stable-ts-refinement.md  pr-feature-merge-dev-into-main.md  pr-refactor-modular-transcription.md
.streamlit/: config.toml
.windsurf/rules/: coding-style-guide.md  environment-variables.md
parakeet_nemo_asr_rocm/: __init__.py  app.py  cli.py  cli_ty.py  merge.py  transcribe.py
parakeet_nemo_asr_rocm/chunking/: chunker.py  merge.py
parakeet_nemo_asr_rocm/formatting/: __init__.py  _csv.py  _json.py  _jsonl.py  _srt.py  _tsv.py  _txt.py  _vtt.py  refine.py
parakeet_nemo_asr_rocm/integrations/: stable_ts.py
parakeet_nemo_asr_rocm/models/: parakeet.py
parakeet_nemo_asr_rocm/timestamps/: adapt.py  models.py  segmentation.py  word_timestamps.py
parakeet_nemo_asr_rocm/transcription/: __init__.py  cli.py  file_processor.py  utils.py
parakeet_nemo_asr_rocm/utils/: __init__.py  audio_io.py  constant.py  env_loader.py  file_utils.py  watch.py
scripts/: dev_shell.sh  download_sample_audio.sh  export_requirements.sh  parakeet_gradio_app.py  parakeet_streamlit_app.py  srt_diff_report.py  srt_diff_three.sh  transcribe_and_diff.py  transcribe_and_diff.sh
tests/: test_adapt_core.py  test_audio_io.py  test_chunker.py  test_cli_unit.py  test_env_loader.py  test_file_utils.py  test_merge.py  test_refine.py  test_segmentation_and_formatters.py  test_segmentation_core.py  test_srt_diff_report.py  test_stable_ts.py  test_transcribe.py  test_transcribe_and_diff.py  test_watch_and_file_utils.py  test_word_timestamps.py
tests/integration/: test_cli.py
to-do/: project-improvements-v2.md  project-improvements.md  refactor-cli-and-features.md  refactor-cli-cleanup.md  srt-improvement-report.md
